--- a/kaguya/templates/explore.html
+++ b/kaguya/templates/explore.html
@@ -243,6 +243,10 @@
       <div class="btn-group">
         <input class="btn btn-success ml-5" type="submit" value="Apply Filters">
       </div>
+      <div class="btn-group">
+        <a href="{{ url_for('main.clearFilters') }}" class="btn btn-danger ml-5"> Clear Filters</a>
+      </div>
+
     </div>
     </form>
   </div>
