added censoring to homepage

--- a/kaguya/templates/home.html
+++ b/kaguya/templates/home.html
@@ -8,7 +8,7 @@
 
 <div class="jumbotron">
   <div class="bg"></div>
-  <h1 class="display-4" style="text-align:center"><b>Welcome to Himawari!</b></h1>
+  <h1 class="display-4" style="text-align:center"><b>Welcome to Kaguya!</b></h1>
   <p class="lead" style="text-align:center">
     <b> Discover Anime.<br>Track your favorites. <br>Join the community.<br></b>
     <br>
