season updates and formatting

--- a/kaguya/templates/register.html
+++ b/kaguya/templates/register.html
@@ -66,10 +66,10 @@
                 {% endfor %}
               </div>
               {{ form.submit(class="btn btn-lg btn-primary btn-block text-uppercase", type="submit") }} 
-              <a class="d-block text-center mt-2 small" href="{{ url_for('users.login') }}">Sign In</a>
+              <a class="d-block text-center mt-2 small" href="{{ url_for('users.login') }}">Have an account? Sign In</a>
               <hr class="my-4">
-              <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fa fa-google" aria-hidden="true"></i> Sign up with Google</button>
-              <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fa fa-facebook" aria-hidden="true"></i></i> Sign up with Facebook</button>
+<!--              <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fa fa-google" aria-hidden="true"></i> Sign up with Google</button>-->
+<!--              <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fa fa-facebook" aria-hidden="true"></i></i> Sign up with Facebook</button>-->
             </form>
           </div>
         </div>
